finished other metrics extractor